tests/ui/discord-frontend/entity_macro/expected_square_brackets_12.stderr
error: expected square brackets
  --> tests/ui/discord-frontend/entity_macro/expected_square_brackets_12.rs:40:15
   |
LL |     relates = core
   |               ^^^^

error: aborting due to 1 previous error

